--- a/Operation on pixels.ipynb
+++ b/Operation on pixels.ipynb
@@ -1537,7 +1537,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2rc1+"
+   "version": "3.5.3"
   }
  },
  "nbformat": 4,
